2007-01-13  Zack Weinberg  <zackw@panix.com>

	* schema_migration.cc (logged_sqlite3_prepare, report_sqlite_error)
	(logged_sqlite3_exec_int, sqlite3_column_string): New functions.
	(logged_sqlite3_exec, calculate_schema_id)
	(migrate_client_to_external_privkeys): Rewrite using
	logged_sqlite3_prepare and sqlite3_step.
	(massage_sql_tokens, append_sql_stmt, extract_key): Delete.
	(diagnose_unrecognized_schema): Use logged_sqlite3_exec_int.

	* schema_migration.cc: Further prune includes and using-declarations.
	(lowercase_facet, calculate_id): Delete.
	(is_ws): Convert from class to predicate function.
	(sqlite3_value_cstr): New, type-adjustment wrapper around _value_text.
	(sqlite_sha1_fn): Clarify logic by using remove_copy_if,
	sqlite3_value_cstr, and a simpler loop in the args>1 case.
	Use transforms.hh's calculate_ident instead of calculate_id.
	(massage_sql_tokens): Move to directly above sole user.
	(calculate_schema_id): Use calculate_ident.
	(sqlite_unbase64_fn): Use sqlite_value_cstr.

	* transforms.cc (encode_hexenc_inner, encode_hexenc, decode_hex_char)
	(decode_hexenc_inner, decode_hexenc): Delete.
	(xform<Botan::Hex_Encoder>): Request lowercase output.
	(calculate_ident): Put a Botan::Hex_Encoder in the pipeline rather
	than doing a separate call to encode_hexenc.  Delete unused overload.
	* transforms.hh (encode_hexenc, decode_hexenc): Define in terms of
	appropriate xform<> instantiations.
	(pack, unpack): Delete unnecessary extern-template declarations.
	(calculate_ident): Delete unused overload.

2007-01-12  Zack Weinberg  <zackw@panix.com>

	* tests/db_migrate_on_bad_schema: Rename to schema_migration_bad_schema.
	Rewrite to test for specific error messages corresponding to the
	five-way distinction made by check_sql_schema.
	* tests/migrate_with_rosterify: Rename to
	schema_migration_with_rosterify.
	* testsuite.lua: Update.

	* schema_migration.cc: Prune headers and using-declarations.  Make